# IntropGrafic

./: .gitmodules  CMakeLists.txt  README.md  debug.txt  demoFunction.txt  main.cpp  setup.h
SDL_bgi-2.4.2/: BUGS  CMakeLists.txt  ChangeLog  INSTALL_Linux.md  INSTALL_Windows.md  INSTALL_macOS.md  LICENSE  README.md  TODO  build.sh  sdl_bgi.spec
SDL_bgi-2.4.2/doc/: compatibility.md  fonts.md  functions.md  howto_CodeBlocks.md  howto_Dev-Cpp.md  sdl_bgi-quickref.tex  using.md
SDL_bgi-2.4.2/src/: Makefile  SDL_bgi.c  graphics.h
SDL_bgi-2.4.2/test/: Makefile  README.md  boo.c  buffers.c  linebuffers.c  multiwin.c  psychedelia.c  setpalette.c  simple.c
SDL_bgi-2.4.2/tmp/: README.md
draw/: draw.cpp  draw.h  elements.cpp  elements.h  main.cpp  main.h  menu.cpp  menu.h  pages.cpp  pages.h  settings.cpp  settings.h
eval/: cboilerplate.txt  generateFunction.cpp  generateFunction.h  parse.cpp  parse.h  readFunction.cpp  readFunction.h  todo.md  validate.cpp  validate.h
evaluator/: evaluator.cpp  evaluator.h  postfixValidator.cpp  postfixValidator.h  tokenize.cpp  tokenize.h
lang/: eng.lang  ro.lang  template.lang
settings/: config-1.conf  default.conf
src/: Makefile.CodeBlocks  Makefile.DevCpp  SDL_bgi.c  SDL_bgi.h  font.h  graphics.h
